# MacroEconomics

./: .gitignore  README.md  macroeconomics.py  pyproject.toml  requirements.txt  updateMacro.py
API_NY.GDP.MKTP.KD.ZG_DS2_en_csv_v2_127/: API_NY.GDP.MKTP.KD.ZG_DS2_en_csv_v2_127.csv
Data/: API_FP.CPI.TOTL.ZG_DS2_en_csv_v2_59.csv  data.csv
legacy/: README.md
samples/: imf_weo_timeseries_2025_april_template.csv
src/: app.py  common.py  macroeconomics.py  macroeconomics_old.py  requirements.txt  updateMacro.py
src/GDP/: macroeconomics.py  macroeconomics_matplotlib.py  updateMacro.py
src/macroeconomics/: __init__.py  __main__.py  app.py  common.py  dash_app.py  data.py  logging_config.py  main.py  plot.py  wsgi.py
src/macroeconomics/core/: common.py  constants.py  functions.py
src/macroeconomics/datasets/: data.py  imf_api.py
src/macroeconomics/features/: build_features.py
src/macroeconomics/maps/: europe.py  figures.py  geo.py  shared_plots.py
src/macroeconomics/viz/: theme.py
src/macroeconomics/viz/charts/: timeseries.py
src/macroeconomics/viz/maps/: europe.py  europe_interactive_map.py  figures.py  geo.py
tests/: test_geo.py  test_smoke.py
