[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macroeconomics"
version = "0.1.0"
description = "Macroeconomic data pipelines, features and forecasting"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "matplotlib",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"