[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macroeconomics"
version = "0.1.0"
description = "IMF WEO data fetch, plotting, and Dash app"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "requests",
  "pandas",
  "plotly",
  "dash"
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["macroeconomics*"]

[project.scripts]
macroe = "macroeconomics.main:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
